--- a/gnome-extra/libgnomeprint/ChangeLog
+++ b/gnome-extra/libgnomeprint/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for gnome-extra/libgnomeprint
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomeprint/ChangeLog,v 1.1 2002/05/22 22:35:57 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomeprint/ChangeLog,v 1.2 2002/05/28 00:52:12 spider Exp $
 
+*libgnomeprint-1.114.0 (27 May 2002)
+  27 May 2002; Spider <spider@gentoo.org> libgnomeprint-1.114.0.ebuild:
+  new version
+ 
 *libgnomeprint-1.113.0 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org>  libgnomeprint-1.113.0.ebuild:
   addition from the gnome2 tree
