--- a/gnome-extra/libgnomeprintui/ChangeLog
+++ b/gnome-extra/libgnomeprintui/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/libgnomeprintui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomeprintui/ChangeLog,v 1.1 2002/05/22 22:38:24 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomeprintui/ChangeLog,v 1.2 2002/05/28 01:00:17 spider Exp $
+
+*libgnomeprintui-1.114.0 (27 May 2002)
+  27 May 2002; Spider <spider@gentoo.org> libgnomeprintui-1.114.0.ebuild:
+  new version. recommended
 
 *libgnomeprintui-1.113.0 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> libgnomeprintui-1.113.0.ebuild:
