--- a/gnome-extra/libgtkhtml/ChangeLog
+++ b/gnome-extra/libgtkhtml/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/libgtkhtml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.1 2002/05/22 22:36:08 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.2 2002/05/28 01:09:51 spider Exp $
+
+*libgtkhtml-1.99.8 (27 May 2002)
+  27 May 2002; Spider <spider@gentoo.org> libgtkhtml-1.99.8.ebuild:
+  new version  
 
 *libgtkhtml-1.99.7 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> libgtkhtml-1.99.7.ebuild:
