--- a/net-libs/linc/ChangeLog
+++ b/net-libs/linc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/linc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/ChangeLog,v 1.2 2002/05/23 19:15:18 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/ChangeLog,v 1.3 2002/05/28 01:43:58 spider Exp $
+
+
+*linc-0.5.0 (27 May 2002)
+  27 May 2002; Spider <spider@gentoo.org> linc-0.5.0.ebuild :
+  latest release!
 
 
 *linc-0.1.22 (23 May 2002)
