--- a/x11-misc/gkrellmms/ChangeLog
+++ b/x11-misc/gkrellmms/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/gkrellmms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gkrellmms/ChangeLog,v 1.2 2002/03/12 12:36:17 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gkrellmms/ChangeLog,v 1.3 2002/05/28 03:05:29 seemant Exp $
+
+*gkrellmms-0.5.6 (27 May 2002)
+
+  27 May 2002; Seemant Kulleen <seemant@gentoo.org>
+
+    The patch was applied and upstream upped the version number.
 
 *gkrellmms-0.5.5-r1 (12 Mar 2002)
 
