--- a/net-www/htdig/ChangeLog
+++ b/net-www/htdig/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-www/htdig
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.7 2002/05/22 22:51:14 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.8 2002/05/28 04:57:17 mkennedy Exp $
+
+*htdig-3.1.6-r4 (27 May 2002)
+
+  27 May 2002; Matthew Kennedy <mkennedy@gentoo.org>
+  htdig-3.1.6-r4.ebuild, files/digest-htdig-3.1.6-r4, ChangeLog :
+
+  Adds -Wno-deprecated to CPPFLAGS to allow compilation under
+  gcc3.1. Resolves bug #3091, thanks to lars.pechan@paradise.net.nz
+  (Lars Pechan).
 
 *htdig-3.1.6-r3 (22 May 2002)
 
