--- a/app-misc/jpilot/ChangeLog
+++ b/app-misc/jpilot/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for app-misc/jpilot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/jpilot/ChangeLog,v 1.2 2002/02/12 21:20:16 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/jpilot/ChangeLog,v 1.3 2002/05/28 06:32:55 seemant Exp $
+
+*jpilot-0.99.2-r1 (27 May 2002)
+
+  27 May 2002; Seemant Kulleen <seemant@gentoo.org> jpilot-0.99.2-r1.ebuild
+  files/digest-jpilot-0.99.2-r1 :
+
+  Recenly I updated the pilot-link and gnome-pilot and gnome-pilot-link
+  packages.  As a result, the syncmal plugin for the jpilot package broke.
+  Upon closer investigation, it turned out the syncmal-plugin itself has an
+  updated version.  So, this revision differs only by the version number of
+  the syncmal plugin.
 
 *jpilot-0.99.2 (12 Feb 2002)
 
