--- a/app-arch/gnorpm/ChangeLog
+++ b/app-arch/gnorpm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/gnorpm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-arch/gnorpm/ChangeLog,v 1.1 2002/02/01 21:52:59 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/gnorpm/ChangeLog,v 1.2 2002/05/28 09:05:02 spider Exp $
+
+*gnorpm-0.96 (28 May 2002)
+  28 May 2002; Spider <spider@gentoo.org> gnorpm-0.96.ebuild :
+  I'm adding the latest here even if it doesn't work for me.... hoping
+  somone will find something out. its masked and probably abandonware
+
 
 *gnorpm-0.95.1-r1 (1 Feb 2002)
 
