--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.9 2002/05/25 22:07:24 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.10 2002/05/28 10:57:43 seemant Exp $
+
+*balsa-1.3.6-r1 (28 May 2002)
+
+  28 May 2002; Seemant Kulleen <seemant@gentoo.org> balsa-1.3.6-r1.ebuild
+  files/balsa-1.3.6-gentoo.patch files/digest-balsa-1.3.6-r1 :
+
+  Updated to patch things.  This should close bug #2998 by
+  christian-neumair@web.de (Christian Neumair)
 
 *balsa-1.3.6 (25 May 2002)
 
