--- a/sys-apps/wireless-tools/ChangeLog
+++ b/sys-apps/wireless-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/wireless-tools
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/wireless-tools/ChangeLog,v 1.2 2002/03/16 02:07:35 chadh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/wireless-tools/ChangeLog,v 1.3 2002/05/28 19:04:14 karltk Exp $
+
+*wireless-tools-24 ( 28 May 2002 )
+
+  28 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> wireless-tools-24.ebuild files/digest-wireless-tools-24:
+
+  New upstream version. 
 
 *wireless-tools-23 ( 10 Feb 2002 )
   15 Mar 2002: Chad Huneycutt <chadh@gentoo.org>
