--- a/x11-base/opengl-update/ChangeLog
+++ b/x11-base/opengl-update/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/opengl-update
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-base/opengl-update/ChangeLog,v 1.1 2002/05/12 18:33:22 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/opengl-update/ChangeLog,v 1.2 2002/05/28 23:35:49 azarah Exp $
+
+*opengl-update-1.1 (28 May 2002)
+
+  28 May 2002; Martin Schlemmer <azarah@gentoo.org> opengl-update-1.1.ebuild :
+
+  Update to also handle libGLU.so.
 
 *opengl-update-1.0 (12 May 2002)
 
