--- a/net-mail/mutt/ChangeLog
+++ b/net-mail/mutt/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-mail/mutt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mutt/ChangeLog,v 1.3 2002/04/26 00:11:56 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mutt/ChangeLog,v 1.4 2002/05/29 21:29:34 rphillips Exp $
 
+*mutt-1.4 (29 May 2002)
+
+  29 Apr 2002; Ryan Phillips <rphillips@gentoo.org> mutt-1.4.ebuild :
+
+  new version
+  
 *mutt-1.3.28-r1 (25 Apr 2002)
 
   25 Apr 2002; Ryan Phillips <rphillips@gentoo.org> mutt-1.3.28-r1.ebuild :
