fixing a xml bug in xscreensaver

--- a/app-misc/xscreensaver/ChangeLog
+++ b/app-misc/xscreensaver/ChangeLog
@@ -1,8 +1,13 @@
 # ChangeLog for app-misc/xscreensaver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/xscreensaver/ChangeLog,v 1.6 2002/04/07 20:42:39 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/xscreensaver/ChangeLog,v 1.7 2002/05/29 23:13:15 spider Exp $
 
   07 Apr 2002; Dan Armak <danarmak@gentoo.org> removed obsolete kde-env dep, fixes bug #1581.
+
+
+*xscreensaver-4.02-r1 (29 May 2002)
+  29 May 2002;  Spider <spider@gentoo.org> xscreensaver-4.02-r1.ebuild :
+  finally solved a xml include bug .
 
 *xscreensaver-4.02 (19 Mar 2002)
 
