--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,9 +1,21 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.10 2002/05/28 10:57:43 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.11 2002/05/30 14:12:40 spider Exp $
+
+
+*balsa-2.0.0_pre1 (30May 2002)
+  30 May 2002; Spider <spider@gentoo.org> balsa-2.0.0_pre1.ebuild :
+  Adding the Gnome2 branch
+  updated the patch to apply
+  please note that this is a "technical preview" thats why I added the
+  _pre1 and the date tag inside the ebuild, when balsa updates the
+  package we can modify the date and upp the pre until the final version
+  is released.
+
+  Btw.. do balsa -ever- release a "stable" product? I sense debianism
+  here.
 
 *balsa-1.3.6-r1 (28 May 2002)
-
   28 May 2002; Seemant Kulleen <seemant@gentoo.org> balsa-1.3.6-r1.ebuild
   files/balsa-1.3.6-gentoo.patch files/digest-balsa-1.3.6-r1 :
 
