--- a/x11-misc/gkrellweather/ChangeLog
+++ b/x11-misc/gkrellweather/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-misc/gkrellweather
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gkrellweather/ChangeLog,v 1.2 2002/03/18 11:47:23 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gkrellweather/ChangeLog,v 1.3 2002/05/30 15:48:43 g2boojum Exp $
+
+*gkrellweather-0.2.7-r2 (30 May 2002)
+
+  30 May 2002; Seemant Kulleen <seemant@gentoo.org> gkrellweather-0.2.7-r2.ebuild :
+
+  Hmmm.  The GrabWeather script is hardcoded into /usr/share/gkrellm only
+  in the Debian version.  I added the debian patch which does just that.
 
 *gkrellweather-0.2.7-r1 (18 Mar 2002)
 
