--- a/net-misc/gift/ChangeLog
+++ b/net-misc/gift/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-misc/gift
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gift/ChangeLog,v 1.2 2002/03/16 02:36:04 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gift/ChangeLog,v 1.3 2002/05/30 20:45:58 verwilst Exp $
+
+*gift-0.10.0_pre020527 (30 May 2002)
+
+  30 May 2002; Bart Verwilst <verwilst@gentoo.org> :
+
+  New cvs snapshot of gift.. I've masked it, and added a big notice that 
+  people who want to use it MUST update gift whenever a new version is 
+  available, otherwise they'll pollute the network.. I'll be adding a new 
+  version every week or so, and remove the older version.
 
 *gift-0.9.7 (1 Feb 2002)
 
