--- a/net-misc/kift/ChangeLog
+++ b/net-misc/kift/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/kift
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/kift/ChangeLog,v 1.1 2002/02/01 21:53:35 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kift/ChangeLog,v 1.2 2002/05/30 20:48:01 verwilst Exp $
+
+*kift-0.8.1 (30 May 2002)
+
+  30 May 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
+
+  Updated to latest version, KDE 3, uses OpenFT now..
 
 *kift-0.7.0 (1 Feb 2002)
 
