--- a/x11-libs/libzvt/ChangeLog
+++ b/x11-libs/libzvt/ChangeLog
@@ -1,7 +1,12 @@
 # ChangeLog for x11-libs/libzvt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libzvt/ChangeLog,v 1.2 2002/05/29 11:26:53 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libzvt/ChangeLog,v 1.3 2002/05/30 23:26:20 blocke Exp $
 
+*libzvt-1.116.1 (30 May 2002)
+
+  30 May 2002; Bruce A. Locke <blocke@shivan.org> libzvt-1.116.1.ebuild:
+
+  This release should fix the gnome-terminal color issues
 
 *libzvt-1.116.0 (29 May 2002)
   29 May 2002; Spider <spider@gentoo.org> libzvt-1.116.0.ebuild :
