--- a/net-www/dillo/ChangeLog
+++ b/net-www/dillo/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/dillo
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/dillo/ChangeLog,v 1.3 2002/04/27 06:26:57 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/dillo/ChangeLog,v 1.4 2002/05/31 01:20:49 seemant Exp $
+
+*dillo-0.6.6 (30 May 2002)
+
+  30 May 2002; Seemant Kulleen <seemant@gentoo.org> dillo-0.6.6.ebuild
+  files/digest-dillo-0.6.6 :
+
+  Version bump thanks to: xelnix@yahoo.com (Austin Johnson) in bug#3237
 
 *dillo-0.6.5 (26 Apr 2002)
 
