--- a/media-libs/libmovtar/ChangeLog
+++ b/media-libs/libmovtar/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-libs/libmovtar
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmovtar/ChangeLog,v 1.2 2002/04/12 18:59:19 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmovtar/ChangeLog,v 1.3 2002/05/31 01:33:26 seemant Exp $
+
+*libmovtar-0.1.3 (30 May 2002)
+
+  30 May 2002; Seemant Kulleen <seemant@gentoo.org> libmovtar-0.1.3.ebuild
+  files/digest-libmovtar-0.1.3 :
+
+  Version bump.
+
+*libmovtar-0.1.2 (11 Apr 2002)
 
   11 Apr 2002; Spider <spider@gentoo.org>
   Update all glib dependencies to use glib-1.2*  in preparation of unmasking the glib-2.0.1 packages
