- UPdated to version 0.56.  There are important changes in this version, everybody should read the docs.

--- a/net-mail/tmda/ChangeLog
+++ b/net-mail/tmda/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/tmda
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/tmda/ChangeLog,v 1.12 2002/05/15 04:25:58 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/tmda/ChangeLog,v 1.13 2002/05/31 04:38:53 agenkin Exp $
+
+*tmda-0.56 ( 30 May 2002 )
+
+  30 May 2002; Arcady Genkin <agenkin@thpoon.com> tmda-0.56.ebuild :
+
+  Version 0.56 is released.  There are important changes in the program.
+  Please read the documentation in the UPGRADE file.
 
 *tmda-0.55 ( 15 May 2002 )
 
