--- a/gnome-extra/battstat/ChangeLog
+++ b/gnome-extra/battstat/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for gnome-extra/battstat
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/battstat/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/battstat/ChangeLog,v 1.2 2002/05/31 04:39:12 seemant Exp $
+
+*battstat-2.0.10-r2 (30 May 2002)
+
+  30 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  battstat-2.0.10-r2.ebuild files/digest-battstat-2.0.10-r2 :
+
+  Sandbox violations fixed.  Thanks to dave@cs.colgate.edu (Dave Nellans)
+  in bug #2046 for finding it.
 
 *battstat-2.0.10-r1 (1 Feb 2002)
 
