--- a/x11-base/xfree/ChangeLog
+++ b/x11-base/xfree/ChangeLog
@@ -1,10 +1,15 @@
 # ChangeLog for x11-base/xfree
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.19 2002/05/29 01:13:41 azarah Exp $
-
-
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.20 2002/05/31 15:38:02 azarah Exp $
 
 *xfree-4.2.0-r11 (28 May 2002)
+
+  30 May 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild,
+                                                    xfs.start, xfs.conf.d,
+						    xfs.config :
+
+  Fix the xfs port issue in a sane manner ... btw, what happned to the
+  idea that changes should be added to the Changelog ?
 
   29 May 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild :
 
