--- a/net-im/kmerlin/ChangeLog
+++ b/net-im/kmerlin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/kmerlin
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/kmerlin/ChangeLog,v 1.3 2002/04/30 15:02:49 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kmerlin/ChangeLog,v 1.4 2002/05/31 18:16:57 danarmak Exp $
+
+*kmerlin-1.0-r1 (31 May 2002)
+
+  31 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  
+  Force usage of autoconf-2.1x to fix bug #3261.
 
 *kmerlin-1.0 (30 April 2002)
 
