--- a/sys-apps/fcron/ChangeLog
+++ b/sys-apps/fcron/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for sys-apps/fcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/fcron/ChangeLog,v 1.2 2002/05/04 17:28:32 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/fcron/ChangeLog,v 1.3 2002/05/31 19:48:00 bangert Exp $
 
-  4 May 2002; Thilo Bangert <bangert@gentoo.org> frcon-2.0.0-r1.ebuild :
+  31 May 2002; Thilo Bangert <bangert@gentoo.org> fcron-2.0.0-r1.ebuild :
+  
+  fix for autoconf troubles - contributed by bZ at iq dash computing dot de    
+
+  4 May 2002; Thilo Bangert <bangert@gentoo.org> fcron-2.0.0-r1.ebuild :
 
   added LICENSE - lintoolize
 
