--- a/app-misc/gtk-theme-switch/Changelog
+++ b/app-misc/gtk-theme-switch/Changelog
@@ -1,9 +1,12 @@
 # ChangeLog for app-misc/gtk-theme-switch
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gtk-theme-switch/Changelog,v 1.1 2002/05/09 18:35:17 bass Exp $
+# AUTHOR: José Alberto Suárez López <bass@gentoo.org>
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gtk-theme-switch/Changelog,v 1.2 2002/05/31 21:00:12 bass Exp $
 
 *gtk-theme-switch-1.0.1 (06 may 2002)
 
   06 may 2002 ; José Alberto Suárez López <bass@gentoo.org> ChangeLog :
-  
 	First Relase 
+
+  31 May 2002; J. Alberto Suárez L. <bass@gentoo.org> gtk-theme-switch :
+  	Fisex problem with gtk.
