--- a/app-editors/xemacs-gtk/ChangeLog
+++ b/app-editors/xemacs-gtk/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-editors/xemacs-gtk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-gtk/ChangeLog,v 1.1 2002/05/21 22:50:52 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-gtk/ChangeLog,v 1.2 2002/05/31 23:42:05 mkennedy Exp $
+
+*xemacs-gtk-21.4.8 (31 May 2002)
+
+  31 May 2002; Matthew Kennedy <mkennedy@gentoo.org>
+  xemacs-gtk-21.4.8-r1.ebuild,
+  files/digest-xemacs-gtk-21.4.8-r1, ChangeLog :
+
+  Back to gpm-1.19.6.
 
 *xemacs-gtk-21.4.8 (20 May 2002)
 
