--- a/app-editors/xemacs-gtk/ChangeLog
+++ b/app-editors/xemacs-gtk/ChangeLog
@@ -1,8 +1,8 @@
 # ChangeLog for app-editors/xemacs-gtk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-gtk/ChangeLog,v 1.2 2002/05/31 23:42:05 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-gtk/ChangeLog,v 1.3 2002/05/31 23:42:51 mkennedy Exp $
 
-*xemacs-gtk-21.4.8 (31 May 2002)
+*xemacs-gtk-21.4.8-r1 (31 May 2002)
 
   31 May 2002; Matthew Kennedy <mkennedy@gentoo.org>
   xemacs-gtk-21.4.8-r1.ebuild,
