--- a/app-sci/xdrawchem/ChangeLog
+++ b/app-sci/xdrawchem/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-sci/xdrawchem
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-sci/xdrawchem/ChangeLog,v 1.1 2002/05/06 01:08:09 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/xdrawchem/ChangeLog,v 1.2 2002/06/01 08:14:56 rphillips Exp $
+
+*xdrawchem-1.2 (1 June 2002)
+
+  1 June 2002; Ryan Phillips <rphillips@gentoo.org> xdrawchem-1.2.ebuild:
+
+  Updated version.  Fixes #3100
 
 *xdrawchem-1.1.1 (5 May 2002)
   
