--- a/net-misc/gtkesms/Changelog
+++ b/net-misc/gtkesms/Changelog
@@ -1,9 +1,13 @@
 # ChangeLog for net-misc/esms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gtkesms/Changelog,v 1.2 2002/05/31 21:00:54 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gtkesms/Changelog,v 1.3 2002/06/01 08:48:12 blocke Exp $
 
 *gtkems-0.0.4 (26 May 2002)
+
+  01 Jun 2002; Bruce A. Locke <blocke@shivan.org> gtkems-0.0.4.ebuild:
+
+  GTK+ dependency fix
 
   26 May 2002; J.Alberto S.L. <bass@gentoo.org> gtkesms-0.0.4.ebuild:
 	First relase.
