--- a/net-misc/firestarter/Changelog
+++ b/net-misc/firestarter/Changelog
@@ -1,9 +1,13 @@
 # ChangeLog for misc-net/firestarter
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/net-misc/firestarter/Changelog,v 1.2 2002/05/31 21:00:54 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/firestarter/Changelog,v 1.3 2002/06/01 08:49:31 blocke Exp $
 
 *firestarter-0.8.2 (27 May 2002)
+
+  01 Jun 2002; Bruce A. Locke <blocke@shivan.org> firestarter-0.8.2.ebuild:
+
+  GTK+ dependency fix
 
   27 May 2002; J.Alberto S.L. <bass@gentoo.org> firestarter-0.8.2.ebuild:
 	First relase.
