--- a/net-mail/nmh/ChangeLog
+++ b/net-mail/nmh/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/nmh
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/nmh/ChangeLog,v 1.2 2002/05/04 03:15:25 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/nmh/ChangeLog,v 1.3 2002/06/01 11:16:49 azarah Exp $
+
+*nmh-1.0.4-r2 (1 June 2002)
+
+  1 June 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Resolve bug #2338.  Seems without a valid /usr/bin/vi, this sandbox
+  violation accured.  Should be fixed in some better way.
 
 *nmh-1.0.4-r1 (3 May 2002)
 
