--- a/app-misc/xscreensaver/ChangeLog
+++ b/app-misc/xscreensaver/ChangeLog
@@ -1,9 +1,14 @@
 # ChangeLog for app-misc/xscreensaver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/xscreensaver/ChangeLog,v 1.7 2002/05/29 23:13:15 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/xscreensaver/ChangeLog,v 1.8 2002/06/01 11:16:52 azarah Exp $
+
+*xscreensaver-4.02-r2 (01 June 2002)
+
+  01 June 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Just some general cleanups and USE flag additions.
 
   07 Apr 2002; Dan Armak <danarmak@gentoo.org> removed obsolete kde-env dep, fixes bug #1581.
-
 
 *xscreensaver-4.02-r1 (29 May 2002)
   29 May 2002;  Spider <spider@gentoo.org> xscreensaver-4.02-r1.ebuild :
