--- a/x11-base/opengl-update/ChangeLog
+++ b/x11-base/opengl-update/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-base/opengl-update
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-base/opengl-update/ChangeLog,v 1.3 2002/05/29 01:13:52 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/opengl-update/ChangeLog,v 1.4 2002/06/01 19:50:16 azarah Exp $
+
+*opengl-update-1.3 (1 June 2002)
+
+  1 June 2002; Martin Schlemmer <azarah@gentoo.org> opengl-update-1.3.ebuild :
+
+  Fix error in opengl-update's help (should be "opengl-update xfree" and not
+  "opengl-update xfree86"); bug #3166.
 
 *opengl-update-1.2 (29 May 2002)
 
