--- a/x11-base/opengl-update/files/opengl-update-1.3
+++ b/x11-base/opengl-update/files/opengl-update-1.3
@@ -2,7 +2,7 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
 # Author:  Martin Schlemmer <azarah@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/x11-base/opengl-update/files/opengl-update-1.2,v 1.1 2002/05/29 01:13:52 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/opengl-update/files/opengl-update-1.3,v 1.1 2002/06/01 19:50:17 azarah Exp $
 
 
 source /etc/init.d/functions.sh
@@ -23,7 +23,7 @@ note:
        implementations for XFree86 and the NVidia drivers respectively.
 
 examples:
-       opengl-update xfree86
+       opengl-update xfree
        This will setup things to use libGL.so from XFree86
 
        opengl-update nvidia
