--- a/app-cdr/arson/ChangeLog
+++ b/app-cdr/arson/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/arson
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/arson/ChangeLog,v 1.3 2002/05/12 19:45:59 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/arson/ChangeLog,v 1.4 2002/06/01 19:56:38 danarmak Exp $
+
+*arson-0.9.5-r1 (1 Jun 2002)
+
+  1 Jun 2002; Dan Armak <danarmak@gentoo.org> ebuild :
+  
+  Fix bug #3225 - enforce autoconf 2.1x.
 
 *arson-0.9.5 (12 May 2002)
 
