--- a/gnome-base/bonobo-activation/ChangeLog
+++ b/gnome-base/bonobo-activation/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/bonobo-activation
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.3 2002/05/23 19:30:12 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.4 2002/06/02 00:10:39 spider Exp $
+
+bonobo-activation-1.0.0 (1 Jun 2002)
+  1 Jun 2002; Spider <spider@gentoo.org> bonobo-activation-1.0.0.ebuild :
+  1.0.0 released!
+
 
 bonobo-activation-0.9.9 (23 May 2002)
    23  May 2002; Spider <spider@gentoo.org> bonobo-activation-0.9.9.ebuild:
