--- a/net-misc/fping/ChangeLog
+++ b/net-misc/fping/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/fping
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/fping/ChangeLog,v 1.1 2002/02/01 21:53:35 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/fping/ChangeLog,v 1.2 2002/06/02 10:41:38 azarah Exp $
+
+*fping-2.4_beta2 (2 Jun 2002)
+
+  2 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Version bump; move to /usr/sbin.
 
 *fping-2.2_beta1 (1 Feb 2002)
 
