--- a/app-text/ggv/ChangeLog
+++ b/app-text/ggv/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for app-text/ggv
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/ggv/ChangeLog,v 1.4 2002/05/23 00:25:46 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ggv/ChangeLog,v 1.5 2002/06/02 12:13:38 spider Exp $
 
-
+*ggv-1.99.6 (1 Jun 2002) 
+  1 Jun 2002; Spider <spider@gentoo.org> ggv-1.99.6.ebuild: 
+  Use gnome2.eclass now instead
+   
 *ggv-1.99.4 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> ggv-1.99.4.ebuild ggv-1.99.5.ebuild :
   .4 is the last known working gnome2 until next gtk+ version is released
