--- a/media-sound/xmms/ChangeLog
+++ b/media-sound/xmms/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/xmms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/ChangeLog,v 1.14 2002/06/02 11:44:05 doctomoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/ChangeLog,v 1.15 2002/06/02 15:12:02 stroke Exp $
+
+*xmms-1.2.7-r8 (02 June 2002)
+
+  02 June 2002; Gabriele Giorgetti <stroke@gentoo.org> xmms-1.2.7-r8.ebuild:
+  
+  digest-xmms-1.2.7-r8 added. fiexes bug #3325  
 
 *xmms-1.2.7-r8 (02 June 2002)
 
