new eclassed version

--- a/x11-misc/metacity-setup/ChangeLog
+++ b/x11-misc/metacity-setup/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/metacity-setup
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/metacity-setup/ChangeLog,v 1.1 2002/05/28 16:20:16 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/metacity-setup/ChangeLog,v 1.2 2002/06/02 15:49:41 spider Exp $
+
+*metacity-setup-0.4.1 (1 Jun 2002)
+  1 Jun 2002; Spider <spider@gentoo.org> metacity-setup-0.4.1.ebuild :
+  this program never runs on .0 releases ;)
+  New eclassed version
 
 *metacity-setup-0.3.1 (28 May 2002)
   28 May 2002; Spider <spider@gentoo.org> ChangeLog metacity-setup-0.3.1.ebuild :
