--- a/x11-misc/wmpinboard/Changelog
+++ b/x11-misc/wmpinboard/Changelog
@@ -1,6 +1,7 @@
 # ChangeLog for x11-misc/wmpinboard
+# Author: José Alberto Suárez López <bass@gentoo.org>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmpinboard/Changelog,v 1.1 2002/05/26 21:54:38 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmpinboard/Changelog,v 1.2 2002/06/02 19:43:31 bass Exp $
 
 *wmpinboard-1.0 (26 May 2002)
 
