--- a/x11-base/xfree/ChangeLog
+++ b/x11-base/xfree/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for x11-base/xfree
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.21 2002/06/02 15:43:57 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.22 2002/06/02 21:07:31 azarah Exp $
 
 *xfree-4.2.0-r11 (28 May 2002)
 
@@ -8,6 +8,9 @@
 
   Some more symlink cleanups.  Dont nuke the host.def, just filter our
   hardcoded CFLAGS.
+
+  Fix /etc/X11/xdm/Xsession to first run ~/.xsession, rather then the system
+  default (bug #2731).
 
   30 May 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild,
                                                     xfs.start, xfs.conf.d,
