--- a/net-www/lynx/ChangeLog
+++ b/net-www/lynx/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-www/lynx
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/lynx/ChangeLog,v 1.4 2002/05/29 23:24:18 prez Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/lynx/ChangeLog,v 1.5 2002/06/02 21:11:17 mkennedy Exp $
+
+*lynx-2.8.4a-r4 (2 June 2002)
+
+  2 June 2002; Matthew Kennedy <mkennedy@gentoo.org>
+  lynx-2.8.4a-r4.ebuild, files/digest-lynx-2.8.4a-r4,
+  files/lynx-2.8.4a-LYStrings.c-gentoo.patch, ChangeLog :
+
+  Patch for GCC3.1 support. Some users report success with -r3, some
+  don't.
 
 *lynx-2.8.4a-r3 (29 May 2002)
 
