--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.12 2002/05/30 22:54:51 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.13 2002/06/02 22:31:40 stroke Exp $
+
+balsa-2.0.0_pre1 (3 June 2002)
+  3 June 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-2.0.0_pre1.ebuild :
+  files/balsa-2.0.0-varmail.patch added to fix bug #3251
 
 balsa-2.0.0_pre1 (30 May 2002)
   30 May 2002; Spider <spider@gentoo.org> balsa-2.0.0_pre1.ebuild :
-  add a missing dep for pspell
+  add a missing dep for pspell 
 
 *balsa-2.0.0_pre1 (30 May 2002)
   30 May 2002; Spider <spider@gentoo.org> balsa-2.0.0_pre1.ebuild :
