--- a/app-i18n/canna/Changelog
+++ b/app-i18n/canna/Changelog
@@ -1,6 +1,12 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/canna/Changelog,v 1.1 2002/06/01 13:40:35 wmertens Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/canna/Changelog,v 1.2 2002/06/02 23:03:24 wmertens Exp $
+
+*canna-3.5_beta2-r1 (02 Jun 2002)
+
+  03 Jun 2002; Ryan Shaw <ryan.shaw@stanfordalumni.org> :
+  Changed the patches so they apply smoothly.
+  Also some ebuild massaging by wmertens@gentoo.org for lintool happiness.
 
 *canna-3.5_beta2 (02 Jun 2002)
 
