--- a/net-misc/nt/ChangeLog
+++ b/net-misc/nt/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for net-misc/nt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nt/ChangeLog,v 1.3 2002/04/30 19:06:53 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nt/ChangeLog,v 1.4 2002/06/03 06:38:35 prez Exp $
 
 *nt-2.0 (30 Apr 2002)
+
+  3 Jun 2002: Preston A. Elder <prez@gentoo.org> files/nt-2.0-gcc31.patch :
+
+  Added patch to make compile with gcc 3.1
 
 *nt-2.0_rc2 (28 Apr 2002)
 
