--- a/gnome-extra/battstat/ChangeLog
+++ b/gnome-extra/battstat/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/battstat
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/battstat/ChangeLog,v 1.2 2002/05/31 04:39:12 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/battstat/ChangeLog,v 1.3 2002/06/03 12:08:02 seemant Exp $
+
+*battstat-2.0.10-r3 (3 Jun 2002)
+
+  3 Jun 2002; Seemant Kulleen <seemant@gentoo.org> battstat-2.0.10-r3.ebuild
+  files/digest-battstat-2.0.10-r3 :
+
+  Sandbox violation fix for NLS info stuff.  Same bug # fixed.
 
 *battstat-2.0.10-r2 (30 May 2002)
 
