--- a/dev-util/glimmer/ChangeLog
+++ b/dev-util/glimmer/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/glimmer
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/glimmer/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/glimmer/ChangeLog,v 1.2 2002/06/03 14:23:42 stroke Exp $
+
+*glimmer-1.2.1 (3 June 2002)
+  
+  3 June 2002; Gabriele Giorgetti <stroke@gentoo.org> ChangeLog :
+
+  New version. SLOT and LICENSE have been added to the ebuild. 
+
 
 *glimmer-1.1.9.1-r1 (1 Feb 2002)
 
