--- a/net-www/tomcat/ChangeLog
+++ b/net-www/tomcat/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/tomcat
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/ChangeLog,v 1.1 2002/02/01 21:53:36 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/ChangeLog,v 1.2 2002/06/03 22:55:52 karltk Exp $
+
+*tomcat-4.0.3 (03 Jun 2002)
+
+  03 Jun 2002; Karl Trygve Kalleberg <karltk@gentoo.org> tomcat-4.0.3.ebuild files/digest-tomcat-4.0.3 :
+ 
+  New upstream version.
 
 *tomcat-4.0.1 (1 Feb 2002)
 
