--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.6 2002/05/22 21:56:34 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.7 2002/06/04 00:26:42 blocke Exp $
 
+
+  03 Jun 2002; Bruce A. Locke <blocke@shivan.org> control-center-1.4.0.5.ebuild, control-center-1.4.0.4.ebuild, control-center-1.4.0.4-r1.ebuild:
+
+  Added SLOTs
 
 *control-center-1.99.10 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> control-center-1.99.10.ebuild: 
