--- a/gnome-extra/gnomemm/ChangeLog
+++ b/gnome-extra/gnomemm/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/gnomemm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnomemm/ChangeLog,v 1.2 2002/05/04 13:02:11 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnomemm/ChangeLog,v 1.3 2002/06/04 02:51:34 lostlogic Exp $
+
+*gnomemm-1.2.2-r2 (3 Jun 2002)
+
+  3 Jun 2002; Brandon Low <lostlogic@gentoo.org> gnomemm-1.2.2-r2.ebuild
+  
+  New revision should now compile and work on all versions of gcc, please
+  test so I can unmask it.
 
 *gnomemm-1.2.2 (4 May 2002)
 
