--- a/sys-apps/pbbuttonsd/Changelog
+++ b/sys-apps/pbbuttonsd/Changelog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/yaboot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.2 2002/05/09 15:30:32 daybird Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.3 2002/06/04 03:12:33 gerk Exp $
+
+*pbbuttons-0.4.9-r2 (Mon Jun  3 21:39:42 EST 2002); gerk <gerk@gentoo.org>:
+
+Mon Jun  3 21:39:42 EST 2002; gerk <gerk@gentoo.org>:
+	Added init scripts to add to runlevel and set SLOT, LICENSE and
+	RDEPEND in ebuild.
 
 *pbbuttons-0.4.9-r1 (Wed May 8 23:28:00 2002 EST); daybird <daybird@gentoo.org>:
 
