--- a/app-emulation/epsxe/ChangeLog
+++ b/app-emulation/epsxe/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for app-emulation/epsxe
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/epsxe/ChangeLog,v 1.1 2002/06/03 02:53:20 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/epsxe/ChangeLog,v 1.2 2002/06/04 06:36:28 rphillips Exp $
 
+*epsxe-1.5.2 (3 June 2002)
+
+  3 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
+
+  Fixed some incompatibilities with the ebuild
+  
 *epsxe-1.5.2 (2 June 2002)
 
   2 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
