--- a/media-video/nvclock/ChangeLog
+++ b/media-video/nvclock/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/nvclock
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvclock/ChangeLog,v 1.1 2002/02/01 21:53:31 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvclock/ChangeLog,v 1.2 2002/06/04 06:44:20 rphillips Exp $
+
+*nvclock-0.5 (2 Jun 2002)
+
+  2 Jun 2002; Joachim Blaabjerg <styx@SuxOS.org> nvclock-0.5.ebuild:
+
+  Version bump to 0.5, QT GUI support, minor cleanup.
 
 *nvclock-0.4.2 (1 Feb 2002)
 
