--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.7 2002/06/04 00:26:42 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.8 2002/06/04 08:49:11 blocke Exp $
 
+
+*control-center-1.99.10-r1 (04 Jun 2002)
+
+  04 Jun 2002; Bruce A. Locke <blocke@shivan.org> control-center-1.99.10-r1.ebuild:
+
+  Converted to gnome2.eclass
 
   03 Jun 2002; Bruce A. Locke <blocke@shivan.org> control-center-1.4.0.5.ebuild, control-center-1.4.0.4.ebuild, control-center-1.4.0.4-r1.ebuild:
 
